--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,7 +12,7 @@ steps:
   - id: "check linting"
     name: python:3.9
     entrypoint: python3
-    args: ["flake8", "--count", "."]
+    args: ["-m", "flake8", "--count", "."]
 
   - id: "check unused imports"
     name: python:3.9
@@ -22,7 +22,7 @@ steps:
   - id: "check import sorting"
     name: python:3.9
     entrypoint: python3
-    args: ["isort", "--count", "--profile=black", "."]
+    args: ["-m", "isort", "--count", "--profile=black", "."]
 
   - id: "run unit tests"
     name: python:3.9
