add waitfors to parallelize

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,21 +8,25 @@ steps:
     name: python:3.9
     entrypoint: python3
     args: ["-m", "black", ".", "--check"]
+    waitFor: ["install dependencies"]
 
   - id: "check linting"
     name: python:3.9
     entrypoint: python3
     args: ["-m", "flake8", "--count", "."]
+    waitFor: ["install dependencies"]
 
   - id: "check unused imports"
     name: python:3.9
     entrypoint: python3
     args: ["-m", "autoflake", "-r", "--remove-all-unused-imports", "--check", "."]
+    waitFor: ["install dependencies"]
 
   - id: "check import sorting"
     name: python:3.9
     entrypoint: python3
     args: ["-m", "isort", "--check-only", "--profile=black", "."]
+    waitFor: ["install dependencies"]
 
   - id: "run unit tests"
     name: python:3.9
@@ -30,3 +34,4 @@ steps:
     env:
     - "PYTHONPATH=."
     args: ["td2bq_mapper/tests/test_td2bq.py"]
+    waitFor: ["install dependencies"]
