--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,32 @@
-pytest
-pandas
-validate_email
-requests
-teradatasql
+# core dependencies
+pandas==1.2.3
+requests==2.26.0
+teradatasql==17.10.0.5
+validate-email==1.3
+
+# formatting dependencies
+autoflake==1.4
+black==21.11b1
+flake8==4.0.1
+isort==5.10.1
+
+# sub dependencies
+certifi==2021.10.8
+charset-normalizer==2.0.10
+click==8.0.3
+idna==3.3
+mccabe==0.6.1
+mypy-extensions==0.4.3
+numpy==1.22.1
+pathspec==0.9.0
+platformdirs==2.4.1
+pycodestyle==2.8.0
+pycryptodome==3.13.0
+pyflakes==2.4.0
+python-dateutil==2.8.2
+pytz==2021.3
+regex==2022.1.18
+six==1.16.0
+tomli==1.2.3
+typing_extensions==4.0.1
+urllib3==1.26.8
