--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 # core dependencies
-pandas==1.2.3
-requests==2.26.0
-teradatasql==17.10.0.5
+pandas==1.4.1
+requests==2.27.1
+teradatasql==17.10.0.6
 validate-email==1.3
 
 # formatting dependencies
 autoflake==1.4
-black==21.11b1
+black==22.1.0
 flake8==4.0.1
 isort==5.10.1
 
@@ -17,7 +17,7 @@ click==8.0.3
 idna==3.3
 mccabe==0.6.1
 mypy-extensions==0.4.3
-numpy==1.22.1
+numpy==1.22.2
 pathspec==0.9.0
 platformdirs==2.4.1
 pycodestyle==2.8.0
