--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ terraform_generated/*.*
 json_generated/*.*
 logs/
 .DS_Store
+td2bq_mapper/lift_and_shift_mapper/data/test_input_nocommit
+.python-version
