update main readme to note lift-shift-mapper, and move custom-role mapper to a subdir

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,17 @@
 **/__pycache__
 **/.vscode/
+.DS_Store
+.python-version
+
+logs/
+test_out_nocommit/
+
 **/terraform/
 **/tf_backup
-td2bq_mapper/tests/temp_dir/*.*
-!td2bq_mapper/tests/temp_dir/.gitkeep
 terraform_generated/*.*
 json_generated/*.*
-logs/
-.DS_Store
+
+td2bq_mapper/tests/temp_dir/*.*
+!td2bq_mapper/tests/temp_dir/.gitkeep
+
 td2bq_mapper/lift_and_shift_mapper/data/test_input_nocommit
-.python-version
